# management

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-management  Jenkinsfile-cicd  README.md  docker-compose.yml  log.txt  pyproject.toml
app/: __init__.py  config.py  exceptions.py  main.py  test.py
app/authorization/: dependencies.py  hashing.py  oauth2.py  token.py
app/databases/: __init__.py  database.py  redis_base.py  role_model.py  schemas.py  user_model.py
app/error/: __init__.py  error_handler.py  exceptions.py
app/middleware/: __init__.py  auth_middleware.py  log.py
app/models/: __init__.py  role_model.py  schemas.py  user_model.py
app/redis/: __init__.py  redis_body.py
app/routers/: __init__.py  authentication.py  crud.py  roles.py  users.py
app/star/: auth.py
docker/: .dockerignore
docker/jenkins/: Dockerfile
jenkins/: jenkins_service.yaml
test/: test.py
